# CreditDefaultRisk

./: .gitignore  Proiect DM.docx  README.md  actual_imp_df.csv  helpers.py  main.ipynb  mlruns.db  pyproject.toml  requirements.txt  run_tests.py  test_models.py  test_xgboost.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
code/: 1.eda.ipynb  2.feature_engineering.ipynb  3.feature_selection.ipynb  4.models.ipynb  calculate_features.py  eda.ipynb  feature_engineering.ipynb  feature_selection.ipynb  force_plot.html  models.ipynb
code/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
code/catboost_info/learn/: events.out.tfevents
code/catboost_info/test/: events.out.tfevents
features_data/: feature_names.txt  scores_df.csv
importances/: actual_importances_ditribution_rf.csv  actual_importances_ditribution_rf_final.csv
mlruns/0/: meta.yaml
models/: cat_model.joblib  lgb_model.joblib  xgb_model.joblib
models/xgboost_20250306_002602_0d285249/: metadata.json  model.joblib
pipeline1/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
pipeline1/catboost_info/learn/: events.out.tfevents
pipeline1/code/: 4.models.ipynb
pipeline2/: 1.clean_data_pipeline.py  2.fe_script.py  2.feature_engineering.ipynb  4.modelling_and_optimization.ipynb  fix_mistake.py  get_features_pipeline.py  optimized.py  temp.ipynb
pipeline2/feature_engineering_data/: feature_defs.txt
pipeline2/feature_selection_data/: actual_importances_ditribution_lgbm.csv  baseline_feat_importance.csv  selected_feat_importance.csv
src/: run_feature_engineering.py
src/credit_risk/: __init__.py  config.py
src/credit_risk/features/: __init__.py  engineer.py  entity_builder.py  feature_store.py
src/credit_risk/features/selection/: __init__.py  feature_selector_fixed.py
src/credit_risk/models/: __init__.py  estimator.py
src/credit_risk/utils/: data_profiling.py  logging_utils.py  metadata.py  mlflow_tracking.py  processing_strategy.py  streamlit_utils.py
src/credit_risk/web/: __init__.py  app.py  exploratory_analysis_tab.py  main.py  model_utils.py  ui_components.py  utils.py
src/credit_risk/web/components/: feature_selection.py  model_training.py  prediction.py
src/credit_risk/web/tabs/: __init__.py  data_profiling_tab.py  exploratory_analysis_tab.py  feature_selection_tab.py  model_training_tab.py  prediction_tab.py
src/credit_risk/web/tabs/model_training/: __init__.py  data_utils.py  hyperparameter_optimization.py  model_handler.py  ui_components.py  utils.py
src/credit_risk/web/utils/: __init__.py  config.py  gpu.py  page_config.py  sampling.py  sidebar.py
src/examples/: feature_engineering_with_gpu.py  feature_selection_and_model.py
tests/: README.md
tests/test_data/: test_optimizers.py
tests/test_features/: test_engineer.py  test_gpu_and_nan_handling.py  test_hyperopt_nan_issue.py  test_model_training.py
training_data/: test_features.csv  y_test.csv  y_train.csv
